...
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button10"
        android:layout_alignRight="@+id/button10"
        android:layout_alignEnd="@+id/button10"
        android:layout_marginTop="36dp"
        android:id="@+id/button12"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10" />
...
