...
    </LinearLayout>

    <Button
        android:text="Professor?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonProf"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
